# gemini-mcp-client

./: .env.example  .gitignore  README.md  client_gemini.py  client_gemini_function_call.py  pyproject.toml  ruff.toml
